Fix T40191: Misleading TypeError message when registering CollectionProperty wtihout kwarg "type".

Turned up to be a cleanup of doc in that whole module...